🩹 fix: add overflow-x:hidden to resolve aos animation overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 #root {
   margin: 0 auto;
+  width: 100%;
+  overflow-x: hidden;
 }
 
 * {
